--- a/.textlintrc
+++ b/.textlintrc
@@ -4,7 +4,6 @@
     "preset-japanese": true,
     "preset-jtf-style": true,
     "preset-ja-spacing": true,
-    "preset-ja-technical-writing": true,
-    "spellcheck-tech-word": true
+    "preset-ja-technical-writing": true
   }
 }
